--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.number_field :price, required: true %>
   </div>
 
+  <div class="field">
+    <%= form.label :images %>
+    <%= form.file_field :images, required: true, multiple: true %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
