--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,18 @@
 
 <p>
   <strong>Pictures:</strong>
-  
+  <br>
+    <%= image_tag(@post.preview(0))%>
+  <br>
+
+  <% (0...@post.images.count).each do |image| %>
+
+    <%= image_tag(@post.thumbnail(image))%>
+ 
+
+  <% end %>
+
+
 </p>
 
 <p>
