--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,19 +2,15 @@
 
 <h1>Posts</h1>
 <%= search_form_for @q do |f| %>
-
- 
-  <%= f.label :title_cont %>
   <%= f.search_field :title_cont %>
-
   <%= f.submit %>
 <% end %>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
+      <th>Preview</th>
+      <th>Title/Description</th>
       <th>Price</th>
       <th>Author</th>
       <th colspan="3"></th>
