--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,36 +1,60 @@
 
 
-<h1><%= @user.name %></h1>
-
-
-  Tel: <%= @user.phone %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h1><%= @user.name %></h1>
+    </div>
+  </div>
   <br>
-  Lokacija: <%= @user.kraj %>
-
-  <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @user.posts.each do |post| %>
+  <div class="row">
+    <div class="col-sm">
+        <h5>Tel: <%= @user.phone %></h5>
+        
+        <h5>Lokacija: <%= @user.kraj %></h5>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm">
+    <table>
+    <thead>
       <tr>
-        <td><%= post.title %></td>
-        <td><%= post.description %></td>
-        <td><%= post.price %></td>
-        <td><%= link_to 'Show', post %></td>
-        <%= display_post_links(post) %>
+        <th style=" text-align:center"></th>
+        <th style=" text-align:center">Title<br>Description</th>
+        <th style=" text-align:center">Price</th>
+        
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @user.posts.each do |post| %>
+        <tr>
+    <td><div style="width: 180px; height:120px; line-height:120px; text-align:center;"><a href=<%= "/posts/"+post.id.to_s %> style="width:180px"><%= image_tag url_for(post.images[0]), :style => "max-height: 120px; max-width:180px; vertical-align:middle" %></a></div></td>
+    <td style="text-decoration:none; width: 12vw; text-align:center"><%= link_to post.title, post %> <br>
+    <p><%= post.description %></p></td>
+    <td style="text-decoration:none; width: 12vw; text-align:center"><%= post.price %>€</td>
+    
+  </tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+    </div>
+  </div>
+</div>
 
+
+
+
+
+
+
+
+  
+
+  
 
 
 <br>
