--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,9 @@ border-color: #28a745;
     .nav-link:hover {
       
     }
+    .card .card-deck {
+      margin: auto
+    }
 
     
     </style>
@@ -89,8 +92,8 @@ border-color: #28a745;
 
       
     </div>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="notice" style="text-aling:center"><%= notice %></p>
+    <p class="alert" style="text-aling:center"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
