--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -17,7 +17,7 @@
   <br>
   <div class="row">
     <div class="col-sm">
-    <table>
+    <table style="margin:auto">
     <thead>
       <tr>
         <th style=" text-align:center"></th>
