--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container" style="max-width:35em">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -5,22 +6,22 @@
 
     <div class="field">
     <%= f.label :username %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", :required => true %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", :required => true, :class=> "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", :required => true %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :required => true, :class=> "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :phone %><br />
-    <%= f.text_field :phone, autofocus: true, autocomplete: "phone", :required => true %>
+    <%= f.text_field :phone, autofocus: true, autocomplete: "phone", :required => true, :class=> "form-control" %>
   </div>
   
   <div class="field">
     <%= f.label :kraj %><br />
-    <%= f.text_field :kraj, autofocus: true, autocomplete: "kraj", :required => true %>
+    <%= f.text_field :kraj, autofocus: true, autocomplete: "kraj", :required => true, :class=> "form-control" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -29,30 +30,34 @@
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", :class=> "form-control" %>
     <% if @minimum_password_length %>
-      <br />
+    
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :class=> "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", :class=> "form-control" %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit "Update" %>
+  
+    <%= f.submit "Update", :class=> "btn btn-primary" %>
   </div>
+  <br>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h2>Cancel my account</h2>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? </p>
+<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class=> "btn btn-primary", :style=> "max-width: 20em; float:left;" %> <%= link_to "Back", :back, :class=> "btn" %>
 
-<%= link_to "Back", :back %>
+
+</div>
