--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Post</h1>
+
+<div class="container-sm" style="max-width: 43em">
+<h1>Urejanje Oglasa</h1>
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Ogled', @post %> |
+<%= link_to 'Nazaj', posts_path %>
+</div>
