--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Post</h1>
+
+<div class="container-sm" style="max-width: 43em">
+<h1>Nov Oglas</h1>
 
 <%= render 'form', post: @post %>
 
 <%= link_to 'Back', posts_path %>
+</div>
+
+
+
+
+
+
+
+
