--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
 
     <div class="field">
     <%= f.label :username %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", :required => true, :class=> "form-control" %>
+    <%= f.text_field :nameuser, autofocus: true, autocomplete: "name", :required => true, :class=> "form-control" %>
   </div>
 
   <div class="field">
